style.css
:root {
    --blue: #1A3246;
    --cream: #F7F1F0;
}
html {
    font-family: 'Playfair Display', serif;
    font-size: 20px;
    color: #1A3246;
}
body {
    display: flex;
}
.sidebar {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    width: 300px;
    height: 100vh;
    background-color: #E9C1AF;
    text-align: center;
}
.sidebar p {
    margin: 30px;
    font-weight: bold;
    font-size: 40px;
}
.mode {
    border: none;
    background-color: transparent;
}
.mode:hover {
    cursor: pointer;
}
.mode:focus, .removeAll:focus{
    outline: none;
}
.modePic {
    height: 20px;
    width: 20px;
}
input {
    border: 0;
    margin: 25px;
    background: transparent;
    font-size: 20px;
    font-family: 'Playfair Display', serif;
    color: black;
    border-bottom: 2px dashed #1A3246;
}
textarea:focus, input:focus{
    outline: none;
}
::placeholder {
    color: var(--c, #1A3246);
}
#checkbox {
    background-color: #E9C1AF;
}
#submitBtn {
    background-color: #1A3246;
    color: #F7F1F0;
    width: 100px;
    height: 50px;
    padding: 12px;
    border-radius: 10px;
}
#submitBtn:hover {
    cursor: pointer;
}
.main {
    text-align: center;
    width: calc(100% - 300px);
}
.topBar {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    padding: 30px;
    width: 80%;
    align-items: center;
    left: 0;
    margin: auto;
}
.topBar span {
    width: 220px;
}
.removeAll {
    border: none;
    color: #F7F1F0;
    padding: 12px;
    border-radius: 10px;
    text-decoration: none;
    display: inline-block;
    font-size: 20px;
    background-color: rgb(185, 67, 67);
    font-family: 'Playfair Display', serif;
}
.removeAll:hover {
    cursor: pointer;
}
.removeAll:focus, .removeAll:focus{
    outline: none;
}
.mainTable {
    text-align: center;
    left: 0;
    margin: auto;
    width: 80%;
}
th {
    background-color: #1A3246;
    color: #F7F1F0;
    padding: 15px;
    width: 20%;
}
td {
    padding: 20px;
    border-bottom: 2px dashed var(--blue);
    width: 20%;
}
#trashBin {
    width: 22px;
    height: 22px;
}
.remove {
    border: none;
    display: inline-block;
    background-color: transparent;
}
.remove:hover {
    cursor: pointer;
}
.remove:focus, .remove:focus{
    outline: none;
}
.readStatus {
    border: none;
    color: #F7F1F0;
    width: 80px;
    height: 45px;
    text-align: center;
    border-radius: 10px;
    font-size: 18px;
    font-family: 'Playfair Display', serif;
}
.readStatus:hover {
    cursor: pointer;
}
.readStatus:focus, .removeAll:focus{
    outline: none;
}
/* Footer */
.footer {
    position: fixed;
    bottom: 0;
    width: 300px;
    text-align: center;
    padding: 15px 0px;
    font-size: 15px;
    border-top: 2px solid #1A3246;
}
.footer a {
    text-decoration: none;
    color: #1A3246;
}

